Fixed alignment issues

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ html {
 
 .section {
     position: relative;
-    top: 0;
     width: 100%;
     height: 100vh;
     /* Full viewport height */
@@ -51,12 +50,7 @@ html {
 
 }
 
-.tabbed-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
+
 
 a {
     color: inherit;
@@ -79,7 +73,7 @@ a {
     --a: 135deg;
     backdrop-filter: blur(20px);
     background: linear-gradient(var(--gradient-angle), #380009, #001353, #014b7c, #004d2f);
-    background-size: 400% 400%;
+    height: fit-content;
     animation: backgroundAnimation 60s infinite alternate;
 }
 
@@ -111,7 +105,7 @@ a {
     margin: 8px;
     margin-left: 8px;
     margin-right: 8px;
-    width: 256px;
+    width: 8vw;
     height: auto;
     transition: transform 0.2s ease-in-out;
 }
@@ -131,7 +125,7 @@ a {
 
 .sticky-top {
     position: absolute;
-    top: 20px;
+    top: 0.5vh;
     /* Adjust the distance from the bottom */
     transform: translateX(-50%);
     text-align: center;
@@ -182,28 +176,46 @@ a {
 html {
     scroll-behavior: smooth;
 }
+.tabs-parent{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    align-self:auto;
+    width: 100%;
+    height: 50%;
+    margin: 8%;
 
+}
+.tabbed-section {
+    font-size: 60%;
+    height: fit-content;
+    display: flex;
+    max-width: 70vw;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 .tabs {
     width: 100%;
     /* Adjust as needed */
     max-width: 70vw;
     /* Adjust as needed */
-    position: absolute;
-    top: 256px;
     text-align: center;
     cursor: pointer;
     z-index: 2;
+    margin-top: 8%;
 }
 
 .tab-buttons {
     display: flex;
     justify-content: center;
     margin-bottom: 20px;
+    margin-top: 2%;
 }
 
 .tab-button {
     height: 48px;
-    font-size: 16px;
+    font-size: 1vw;
     font-weight: 300;
     min-width: 25vw;
     max-width: 512px;
@@ -224,10 +236,10 @@ html {
 }
 
 .tab-content {
-    display: flex;
-    flex-direction: column;
+    display: block;
     align-items: left;
-    width: 100%;
+    min-width: 70%;
+    height: fit-content;
 }
 
 .tab-pane {
@@ -374,8 +386,10 @@ html {
 .card-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 2vw;
     padding: 20px;
+    margin-top: -16vw;
+
 }
 
 .card {
@@ -392,7 +406,9 @@ html {
     overflow: hidden;
     display: flex;
     flex-direction: column;
-    min-height: 40vh;
+    min-height: 48vh;
+    height:fit-content;
+    width: 24vw;
 }
 
 .card:hover {
@@ -422,12 +438,14 @@ html {
 }
 
 .card h2 {
+    height: 2em;
     margin: 15px 0 10px;
     font-size: 24px;
     color: #000000;
 }
 
 .card p {
+    height: 2em;
     font-size: 16px;
     color: #000000;
 }
